--- a/src/stilos.module.css
+++ b/src/stilos.module.css
@@ -17,3 +17,29 @@
   justify-content: center;
   align-items: center;
 }
+
+.formularioContainer {
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  left: 0;
+  right: 0;
+}
+
+@media screen and (min-width: 760px) {
+  .formularioContainer {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .fonteBotao12 {
+    font-size: 12px;
+  }
+
+  .fonteUsuarioNome {
+    font-size: 12px;
+  }
+}
