--- a/src/stilos.module.css
+++ b/src/stilos.module.css
@@ -2,6 +2,13 @@
   text-transform: capitalize;
 }
 
+.imgUsuario {
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  width: 100px;
+}
+
 .sucesso {
   color: green;
 }
