--- a/src/stilos.module.css
+++ b/src/stilos.module.css
@@ -2,6 +2,11 @@
   text-transform: capitalize;
 }
 
+.botaoPaginas {
+  gap: 5px;
+  display: flex;
+}
+
 .imgUsuario {
   height: 100px;
   border-radius: 50%;
@@ -51,6 +56,6 @@
   }
 
   .botaoPaginas {
-    display: none;
+    display: none !important;
   }
 }
