ajuste nos filtros

--- a/src/stilos.module.css
+++ b/src/stilos.module.css
@@ -58,4 +58,12 @@
   .botaoPaginas {
     display: none;
   }
+
+  .divPaiFiltro {
+    flex-direction: column !important;
+  }
+
+  .divFilhaFiltro {
+    width: 100%;
+  }
 }
